<resources>
    <string name="app_name">SEGFinalProject</string>
    <string name="ServiceHint">Enter a Service Name</string>
    <string name="ServiceNameText">Service Name</string>
    <string name="addServiceButton">ADD</string>
    <string name="employeeText">Choose and Employee</string>
    <string name="ServicesListText">Current Services:</string>
    <string name="ServiceNamePopup">Enter Updated Service Name</string>
    <string name="createServiceText">Create Service</string>
    <string name="clinicAdmin">Clinic Admin Menu</string>
    <string name="clinicAdminText">Clinic Administration Menu</string>
    <string name="adTxt">Administrator Name:</string>
    <string name="adminNameTxt">(ADMINISTRATOR)</string>
    <string name="clinicNameTxt">Clinic Name:</string>
    <string name="clinicName">(CLINIC NAME)</string>
    <string name="manageEmployeesTxt">Manage Employees</string>
    <string name="manClinicServicesTxt">Manage Clinic Services</string>
    <string name="regPatients">Registered Patients</string>
    <string name="employeeListTxt" >Current Employees (hold to delete)</string>
    <string name="deleteUserBtn">Delete User</string>
    <string name="backButton">Back</string>
</resources>
