<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity">

    <LinearLayout
        android:id="@+id/adminLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/adminLayout2"
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/clinicAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/clinicAdminText"
                android:textColor="#1F1F1F"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/adTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adTxt" />

                <TextView
                    android:id="@+id/administrator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adminNameTxt" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/clinicTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clinicNameTxt" />

                <TextView
                    android:id="@+id/clinic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clinicName" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/manageEmployees"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:text="@string/manageEmployeesTxt" />

        <Button
            android:id="@+id/manClinicServices"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:text="@string/manClinicServicesTxt" />

        <Button
            android:id="@+id/registeredPatients"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:text="@string/regPatients" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>